database had to be destroyed, need to create new users with new jwt authentication